Fix Dropdowns when positioned on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,10 +12,15 @@
   padding: 10 5 10 5px;
 }
 
-.ui.table thead tr:first-child > th {
-  position: sticky !important;
-   top: 0;
-   z-index: 2;
+.ui.table thead th {
+  position: relative;
+  z-index: auto
+}
+
+.ui.table thead, tr:first-child > th {
+  position: sticky;
+  top: 0;
+  z-index: auto;
 }
 
 .footer {
@@ -25,3 +30,4 @@
   height: 35px;
   top-padding: 10px;
 }
+
